--- a/Sheffle/MainStoryboard_iPhone.storyboard
+++ b/Sheffle/MainStoryboard_iPhone.storyboard
@@ -151,6 +151,11 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <scopeButtonTitles>
+                                <string>Title</string>
+                                <string>Author</string>
+                                <string>Publisher</string>
+                            </scopeButtonTitles>
                             <connections>
                                 <outlet property="delegate" destination="Vwe-LI-V9D" id="aFZ-td-l8p"/>
                             </connections>
